--- a/political-analyzer/package.json
+++ b/political-analyzer/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-switch": "^1.1.4",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
+    "axios": "^1.8.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "disqus-react": "^1.1.5",
